--- a/assets/css/index.html
+++ b/assets/css/index.html
@@ -8,14 +8,14 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-  <div id="main"> 
+  <div id="main">
     <div id="header">
       <!-- begin nav -->
       <ul id="nav">
         <li><a href="">Home</a></li>
         <li><a href="">Band</a></li>
-        <li><a href="">Tour</a></li>
-        <li><a href="">Contact</a></li>
+        <li><a href="">DIEu</a></li>
+        <li><a href="">Doanh</a></li>
         <li>
           <a href="#">
             More
@@ -30,7 +30,7 @@
       </ul>
       <!-- end nav -->
       <!-- begin:search button -->
-      <div 
+      <div
       class="search-btn">
         <i class="search-btn fa-solid fa-magnifying-glass"></i>
       </div>
@@ -47,7 +47,7 @@
         <p class="section-sub-heading">We love music </p>
         <p class="about-text">We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
-     
+
     </div>
     <div id="footer">
 
