--- a/assets/css/index.html
+++ b/assets/css/index.html
@@ -14,8 +14,8 @@
       <ul id="nav">
         <li><a href="">Home</a></li>
         <li><a href="">Band</a></li>
-        <li><a href="">DIEu</a></li>
-        <li><a href="">Doanh</a></li>
+        <li><a href="">Tour</a></li>
+        <li><a href="">Contact</a></li>
         <li>
           <a href="#">
             More
@@ -30,8 +30,7 @@
       </ul>
       <!-- end nav -->
       <!-- begin:search button -->
-      <div
-      class="search-btn">
+      <div class="search-btn">
         <i class="search-btn fa-solid fa-magnifying-glass"></i>
       </div>
       <!-- end:search button -->
