code heading fixed

--- a/assets/css/index.html
+++ b/assets/css/index.html
@@ -34,6 +34,7 @@
         <i class="search-btn fa-solid fa-magnifying-glass"></i>
       </div>
       <!-- end:search button -->
+    </div>
     <div id="slider">
       <div class="text-content">
         <h2 class="text-heading">LOS ANGELES</h2>
