--- a/assets/css/index.html
+++ b/assets/css/index.html
@@ -46,9 +46,77 @@
         <h2 class="section-heading">THE BAND</h2>
         <p class="section-sub-heading">We love music </p>
         <p class="about-text">We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <div class="member_list">
+          <div class="member_item">
+            <p class="member_name">Name</p>
+              <img src="https://www.w3schools.com/w3images/bandmember.jpg" alt="Name" class="member_image">
+          </div>
+          <div class="member_item">
+            <p class="member_name">Name</p>
+              <img src="https://www.w3schools.com/w3images/bandmember.jpg" alt="Name" class="member_image">
+          </div>
+          <div class="member_item">
+            <p class="member_name">Name</p>
+              <img src="https://www.w3schools.com/w3images/bandmember.jpg" alt="Name" class="member_image">
+          </div>
+          <div class="class"></div>
+        </div>
       </div>
 
-    </div>
+
+      <div class="tour-section">
+        <h2 class="section-heading text-white">TOUR DATES</h2>
+        <p class="section-sub-heading text-white">Remember to book your tickets!</p>
+
+        <ul class="ticket-list">
+          <li>September <span class="sold-out">Sold out</span></li>
+          <li>October <span class="sold-out">Sold out</span></li>
+          <li>November <span class="quantity">3</span></li>
+        </ul>
+        <!-- PLACE -->
+        <!-- PLACE 1 -->
+        <div class="place_list">
+          <div class="place_item">
+            <img src="https://www.w3schools.com/w3images/newyork.jpg" alt="" class="place_img">
+            <div class="place_body">
+              <h3 class="place_heading">NEWYORK</h3>
+              <p class="place_time">Fri 27 Nov 2016</p>
+              <p class="place_discription">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+              <a href="#" class="place_btn">BUY TICKETS</a>
+            </div>
+          </div>
+        </div>
+           <!-- PLACE 2 -->
+          <div class="place_item">
+            <img src="https://www.w3schools.com/w3images/paris.jpg" alt="" class="place_img">
+            <div class="place_body">
+              <h3 class="place_heading">Paris</h3>
+              <p class="place_time">Sat 28 Nov 2016</p>
+              <p class="place_discription">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+              <a href="#" class="place_btn">BUY TICKETS</a>
+            </div>
+          </div>dg
+           <!-- PLACE 3 -->
+          <div class="place_item">
+            <img src="https://www.w3schools.com/w3images/sanfran.jpg" alt="" class="place_img">
+            <div class="place_body">
+              <h3 class="place_heading">San Francisco</h3>
+              <p class="place_time">Sun 29 Nov 2016</p>
+              <p class="place_discription">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+              <a href="#" class="place_btn">BUY TICKETS</a>
+            </div>
+          </div>
+              <div class="clear"></div>
+          </div>
+        </div>
+      </div>
+      <!-- place -->
+
+        <!-- contact -->
+        <div class="content-section">
+          <h2 class="section-heading" style="margin-top: 190px;">CONTACT</h2>
+          <p class="section-sub-heading">Fan? Drop a note!</p>
+        </div>
     <div id="footer">
 
     </div>
