--- a/assets/css/index.html
+++ b/assets/css/index.html
@@ -63,7 +63,7 @@
         </div>
       </div>
 
-
+      <div class="content-tour">
       <div class="tour-section">
         <h2 class="section-heading text-white">TOUR DATES</h2>
         <p class="section-sub-heading text-white">Remember to book your tickets!</p>
@@ -85,7 +85,6 @@
               <a href="#" class="place_btn">BUY TICKETS</a>
             </div>
           </div>
-        </div>
            <!-- PLACE 2 -->
           <div class="place_item">
             <img src="https://www.w3schools.com/w3images/paris.jpg" alt="" class="place_img">
@@ -95,7 +94,7 @@
               <p class="place_discription">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
               <a href="#" class="place_btn">BUY TICKETS</a>
             </div>
-          </div>dg
+          </div>
            <!-- PLACE 3 -->
           <div class="place_item">
             <img src="https://www.w3schools.com/w3images/sanfran.jpg" alt="" class="place_img">
@@ -106,6 +105,7 @@
               <a href="#" class="place_btn">BUY TICKETS</a>
             </div>
           </div>
+        </div>
               <div class="clear"></div>
           </div>
         </div>
@@ -121,6 +121,42 @@
 
     </div>
   </div>
+  <div class="modal">
+    <div class="model_container">
+      <div  class="model_closed">
+        <i class="fa fa-times" aria-hidden="true"></i>
+      </div>
+
+      <header class="modal_header">
+        <i class="fa fa-suitcase" aria-hidden="true"></i>
+        Tickets
+      </header>
+
+      <div class="model_body">
+       <lable class="model_lable">
+        <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+        Tickets, $15 per person
+       </lable>
+       <input type="text" class="lable_input" placeholder="How many?">
+
+      <lable class="model_lable">
+          <i class="fa fa-users" aria-hidden="true"></i>
+          Send to
+      </lable>
+      <input type="text" class="lable_input" placeholder="Enter email">
+      <button id="buy_ticket">
+        Pay
+        <i class="fa fa-check" aria-hidden="true"></i>
+      </button>
+      </div>
+      <footer class="modal_footer">
+        <p class="modal_help">Need <a href="" class="">help?</a></p>
+      </footer>
+    </div>
+  </div>
+  <script>
+
+  </script>
 </body>
 
 </html>
