--- a/assets/css/index.html
+++ b/assets/css/index.html
@@ -12,10 +12,10 @@
     <div id="header">
       <!-- begin nav -->
       <ul id="nav">
-        <li><a href="">Home</a></li>
-        <li><a href="">Band</a></li>
-        <li><a href="">Tour</a></li>
-        <li><a href="">Contact</a></li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#band">Band</a></li>
+        <li><a href="#tour">Tour</a></li>
+        <li><a href="#contact">Contact</a></li>
         <li>
           <a href="#">
             More
@@ -42,7 +42,7 @@
       </div>
     </div>
     <div id="content">
-      <div class="content-section">
+      <div id="band" class="content-section">
         <h2 class="section-heading">THE BAND</h2>
         <p class="section-sub-heading">We love music </p>
         <p class="about-text">We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -64,7 +64,7 @@
       </div>
 
       <div class="content-tour">
-      <div class="tour-section">
+      <div id="tour" class="tour-section">
         <h2 class="section-heading text-white">TOUR DATES</h2>
         <p class="section-sub-heading text-white">Remember to book your tickets!</p>
 
@@ -75,7 +75,7 @@
         </ul>
         <!-- PLACE -->
         <!-- PLACE 1 -->
-        <div class="place_list">
+        <div class="row place_list">
           <div class="place_item">
             <img src="https://www.w3schools.com/w3images/newyork.jpg" alt="" class="place_img">
             <div class="place_body">
@@ -113,16 +113,54 @@
       <!-- place -->
 
         <!-- contact -->
-        <div class="content-section">
+        <div id="contact" class="content-section">
           <h2 class="section-heading" style="margin-top: 190px;">CONTACT</h2>
           <p class="section-sub-heading">Fan? Drop a note!</p>
+
+          <div class="row contact_content">
+            <div class="col col_haft contact_info">
+              <p><i class="fa-solid fa-location-pin"></i>Chicago, US</p>
+              <p><i class="fa-solid fa-phone"></i> Phone: +00 151515</p>
+              <p><i class="fa-regular fa-envelope"></i>Email: mail@mail.com</p>
+              
+            </div>
+            <div class="col col_haft contact_form">
+              <form action="">
+                <div class="row">
+                  <div class="col col_haft">
+                    <input type="text" name="" id="" placeholder="Name" required class="form_control">
+                  </div>
+                  <div class="col col_haft">
+                    <input type="email" name="" id="" placeholder="Email" required class="form_control">
+                  </div>
+                  <div class="clear"></div>
+                </div>
+                <div class="row">
+                  <div class="col col_full contact_form">
+                    <input type="text" name="" id="" placeholder="Message" required class="form_control">
+                  </div>
+                </div>
+                <input type="submit" value="SEND">
+              </form> 
+            </div>
+          </div>
+          <div class="map_section">
+            <img src="https://www.w3schools.com/w3images/map.jpg" alt="map">
+          </div>
         </div>
     <div id="footer">
+      <div class="social_list">
+        <a href=""><i class="fa-brands fa-facebook"></i></a>
+        <a href=""><i class="fa-brands fa-instagram"></i></a>
+        <a href=""><i class="fa-brands fa-tiktok"></i></a>
+        <a href=""><i class="fa-brands fa-twitter"></i></a>
+       
 
+      </div>
     </div>
   </div>
   <div class="modal js_modal">
-    <div class="model_container">
+    <div class="model_container js_modal_container">
       <div  class="model_closed js_model_close">
         <i class="fa fa-times" aria-hidden="true"></i>
       </div>
@@ -157,6 +195,7 @@
   <script>
       const buyBtns = document.querySelectorAll('.js_buy_ticket');
       const modal = document.querySelector('.js_modal');
+      const model_container = document.querySelector('.js_modal_container')
       const model_closed = document.querySelector('.js_model_close');
 
       function show_buyticket() {
