--- a/assets/css/index.html
+++ b/assets/css/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>The Band</title>
+  <!-- ICON -->
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -49,20 +50,20 @@
         <div class="member_list">
           <div class="member_item">
             <p class="member_name">Name</p>
-              <img src="https://www.w3schools.com/w3images/bandmember.jpg" alt="Name" class="member_image">
+            <img src="https://www.w3schools.com/w3images/bandmember.jpg" alt="Name" class="member_image">
           </div>
           <div class="member_item">
             <p class="member_name">Name</p>
-              <img src="https://www.w3schools.com/w3images/bandmember.jpg" alt="Name" class="member_image">
+            <img src="https://www.w3schools.com/w3images/bandmember.jpg" alt="Name" class="member_image">
           </div>
           <div class="member_item">
             <p class="member_name">Name</p>
-              <img src="https://www.w3schools.com/w3images/bandmember.jpg" alt="Name" class="member_image">
+            <img src="https://www.w3schools.com/w3images/bandmember.jpg" alt="Name" class="member_image">
           </div>
           <div class="class"></div>
         </div>
       </div>
-
+<!-- Tour -->
       <div class="content-tour">
       <div id="tour" class="tour-section">
         <h2 class="section-heading text-white">TOUR DATES</h2>
@@ -114,7 +115,7 @@
 
         <!-- contact -->
         <div id="contact" class="content-section">
-          <h2 class="section-heading" style="margin-top: 190px;">CONTACT</h2>
+          <h2 class="section-heading">CONTACT</h2>
           <p class="section-sub-heading">Fan? Drop a note!</p>
 
           <div class="row contact_content">
