--- a/assets/css/index.html
+++ b/assets/css/index.html
@@ -38,7 +38,7 @@
     </div>
     <div id="slider">
       <div class="text-content">
-        <h2 class="text-heading">LOS ANGELES</h2>
+        <h2 class="text-heading"></h2>
         <div class="text-desprition">We had the best time playing at Venice Beach!</div>
       </div>
     </div>
